tests/error/self_errors/generic_shadow1_py312.err
Error: Shadowed generic parameters (at $FILE:8:20)
  | 
6 | class Foo[T]:
7 |     @guppy
8 |     def foo[T: nat](my_self) -> None:   # Shadow
  |                     ^^^^^^^ Cannot infer type for `my_self` since parameter `T` of `Foo`
  |                             is shadowed
  | 
8 |     def foo[T: nat](my_self) -> None:   # Shadow
  |                     ------- Consider specifying the type explicitly: `my_self:
  |                             "Foo[?T]"`

Guppy compilation failed due to 1 previous error
